<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/schedule_nav_item"
        android:id="@+id/tab_schedule"
        android:icon="@drawable/ic_tab_schedule_24"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

    <item
        android:title="@string/notes_nav_item"
        android:icon="@drawable/ic_notes_24"
        android:id="@+id/tab_notes"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

    <item
        android:title="@string/stats_nav_item"
        android:icon="@drawable/ic_tab_chart_24"
        android:id="@+id/tab_chart"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />
</menu>